src/video.h

    typedef cv::Ptr<cv::TrackerMIL> *TrackerMIL;
    typedef cv::KalmanFilter *KalmanFilter;
typedef void *TrackerMIL;
typedef void *KalmanFilter;
    TrackerMIL TrackerMIL_Create();
    void TrackerMIL_Close(TrackerMIL self);
    void KalmanFilter_SetStatePre(KalmanFilter kf, Mat statePre);
    void KalmanFilter_SetStatePost(KalmanFilter kf, Mat statePost);
    void KalmanFilter_SetTransitionMatrix(KalmanFilter kf, Mat transitionMatrix);
    void KalmanFilter_SetMeasurementMatrix(KalmanFilter kf, Mat measurementMatrix);
    void KalmanFilter_SetProcessNoiseCov(KalmanFilter kf, Mat processNoiseCov);
    void KalmanFilter_SetMeasurementNoiseCov(KalmanFilter kf, Mat measurementNoiseCov);