packages/dartcv/lib/src/g/video.g.dart


  ffi.Pointer<CvStatus> KalmanFilter_SetGain_Async(
    KalmanFilter self,
    Mat value,
    imp1.CvCallback_0 callback,
  ) {
    return _KalmanFilter_SetGain_Async(
      self,
      value,
      callback,
    );
  }

  late final _KalmanFilter_SetGain_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, Mat,
              imp1.CvCallback_0)>>('KalmanFilter_SetGain_Async');
  late final _KalmanFilter_SetGain_Async =
      _KalmanFilter_SetGain_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> KalmanFilter_SetMeasurementMatrix(
    KalmanFilter self,
    Mat measurementMatrix,
  ) {
    return _KalmanFilter_SetMeasurementMatrix(
      self,
      measurementMatrix,
    );
  }

  late final _KalmanFilter_SetMeasurementMatrixPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(KalmanFilter, Mat)>>(
      'KalmanFilter_SetMeasurementMatrix');
  late final _KalmanFilter_SetMeasurementMatrix =
      _KalmanFilter_SetMeasurementMatrixPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, Mat)>();

  ffi.Pointer<CvStatus> KalmanFilter_SetMeasurementMatrix_Async(
    KalmanFilter self,
    Mat value,
    imp1.CvCallback_0 callback,
  ) {
    return _KalmanFilter_SetMeasurementMatrix_Async(
      self,
      value,
      callback,
    );
  }

  late final _KalmanFilter_SetMeasurementMatrix_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, Mat,
              imp1.CvCallback_0)>>('KalmanFilter_SetMeasurementMatrix_Async');
  late final _KalmanFilter_SetMeasurementMatrix_Async =
      _KalmanFilter_SetMeasurementMatrix_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> KalmanFilter_SetMeasurementNoiseCov(
    KalmanFilter self,
    Mat measurementNoiseCov,
  ) {
    return _KalmanFilter_SetMeasurementNoiseCov(
      self,
      measurementNoiseCov,
    );
  }

  late final _KalmanFilter_SetMeasurementNoiseCovPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(KalmanFilter, Mat)>>(
      'KalmanFilter_SetMeasurementNoiseCov');
  late final _KalmanFilter_SetMeasurementNoiseCov =
      _KalmanFilter_SetMeasurementNoiseCovPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, Mat)>();

  ffi.Pointer<CvStatus> KalmanFilter_SetMeasurementNoiseCov_Async(
    KalmanFilter self,
    Mat value,
    imp1.CvCallback_0 callback,
  ) {
    return _KalmanFilter_SetMeasurementNoiseCov_Async(
      self,
      value,
      callback,
    );
  }

  late final _KalmanFilter_SetMeasurementNoiseCov_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, Mat,
              imp1.CvCallback_0)>>('KalmanFilter_SetMeasurementNoiseCov_Async');
  late final _KalmanFilter_SetMeasurementNoiseCov_Async =
      _KalmanFilter_SetMeasurementNoiseCov_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> KalmanFilter_SetProcessNoiseCov(
    KalmanFilter self,
    Mat processNoiseCov,
  ) {
    return _KalmanFilter_SetProcessNoiseCov(
      self,
      processNoiseCov,
    );
  }

  late final _KalmanFilter_SetProcessNoiseCovPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(KalmanFilter, Mat)>>(
      'KalmanFilter_SetProcessNoiseCov');
  late final _KalmanFilter_SetProcessNoiseCov =
      _KalmanFilter_SetProcessNoiseCovPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, Mat)>();

  ffi.Pointer<CvStatus> KalmanFilter_SetProcessNoiseCov_Async(
    KalmanFilter self,
    Mat value,
    imp1.CvCallback_0 callback,
  ) {
    return _KalmanFilter_SetProcessNoiseCov_Async(
      self,
      value,
      callback,
    );
  }

  late final _KalmanFilter_SetProcessNoiseCov_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, Mat,
              imp1.CvCallback_0)>>('KalmanFilter_SetProcessNoiseCov_Async');
  late final _KalmanFilter_SetProcessNoiseCov_Async =
      _KalmanFilter_SetProcessNoiseCov_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> KalmanFilter_SetStatePost(
    KalmanFilter self,
    Mat statePost,
  ) {
    return _KalmanFilter_SetStatePost(
      self,
      statePost,
    );
  }

  late final _KalmanFilter_SetStatePostPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(KalmanFilter, Mat)>>(
      'KalmanFilter_SetStatePost');
  late final _KalmanFilter_SetStatePost = _KalmanFilter_SetStatePostPtr
      .asFunction<ffi.Pointer<CvStatus> Function(KalmanFilter, Mat)>();

  ffi.Pointer<CvStatus> KalmanFilter_SetStatePost_Async(
    KalmanFilter self,
    Mat value,
    imp1.CvCallback_0 callback,
  ) {
    return _KalmanFilter_SetStatePost_Async(
      self,
      value,
      callback,
    );
  }

  late final _KalmanFilter_SetStatePost_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, Mat,
              imp1.CvCallback_0)>>('KalmanFilter_SetStatePost_Async');
  late final _KalmanFilter_SetStatePost_Async =
      _KalmanFilter_SetStatePost_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> KalmanFilter_SetStatePre(
    KalmanFilter self,
    Mat statePre,
  ) {
    return _KalmanFilter_SetStatePre(
      self,
      statePre,
    );
  }

  late final _KalmanFilter_SetStatePrePtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(KalmanFilter, Mat)>>(
      'KalmanFilter_SetStatePre');
  late final _KalmanFilter_SetStatePre = _KalmanFilter_SetStatePrePtr
      .asFunction<ffi.Pointer<CvStatus> Function(KalmanFilter, Mat)>();

  ffi.Pointer<CvStatus> KalmanFilter_SetStatePre_Async(
    KalmanFilter self,
    Mat value,
    imp1.CvCallback_0 callback,
  ) {
    return _KalmanFilter_SetStatePre_Async(
      self,
      value,
      callback,
    );
  }

  late final _KalmanFilter_SetStatePre_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, Mat,
              imp1.CvCallback_0)>>('KalmanFilter_SetStatePre_Async');
  late final _KalmanFilter_SetStatePre_Async =
      _KalmanFilter_SetStatePre_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> KalmanFilter_SetTransitionMatrix(
    KalmanFilter self,
    Mat transitionMatrix,
  ) {
    return _KalmanFilter_SetTransitionMatrix(
      self,
      transitionMatrix,
    );
  }

  late final _KalmanFilter_SetTransitionMatrixPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(KalmanFilter, Mat)>>(
      'KalmanFilter_SetTransitionMatrix');
  late final _KalmanFilter_SetTransitionMatrix =
      _KalmanFilter_SetTransitionMatrixPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, Mat)>();

  ffi.Pointer<CvStatus> KalmanFilter_SetTransitionMatrix_Async(
    KalmanFilter self,
    Mat value,
    imp1.CvCallback_0 callback,
  ) {
    return _KalmanFilter_SetTransitionMatrix_Async(
      self,
      value,
      callback,
    );
  }

  late final _KalmanFilter_SetTransitionMatrix_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, Mat,
              imp1.CvCallback_0)>>('KalmanFilter_SetTransitionMatrix_Async');
  late final _KalmanFilter_SetTransitionMatrix_Async =
      _KalmanFilter_SetTransitionMatrix_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, Mat, imp1.CvCallback_0)>();

  void TrackerMIL_Close(
    TrackerMILPtr self,
  ) {
    return _TrackerMIL_Close(
      self,
    );
  }

  late final _TrackerMIL_ClosePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(TrackerMILPtr)>>(
          'TrackerMIL_Close');
  late final _TrackerMIL_Close =
      _TrackerMIL_ClosePtr.asFunction<void Function(TrackerMILPtr)>();

  ffi.Pointer<CvStatus> TrackerMIL_Create(
    ffi.Pointer<TrackerMIL> rval,
  ) {
    return _TrackerMIL_Create(
      rval,
    );
  }

  late final _TrackerMIL_CreatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<TrackerMIL>)>>('TrackerMIL_Create');
  late final _TrackerMIL_Create = _TrackerMIL_CreatePtr.asFunction<
      ffi.Pointer<CvStatus> Function(ffi.Pointer<TrackerMIL>)>();

  ffi.Pointer<CvStatus> TrackerMIL_Create_Async(
    imp1.CvCallback_1 callback,
  ) {
    return _TrackerMIL_Create_Async(
      callback,
    );
  }

  late final _TrackerMIL_Create_AsyncPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>>(
      'TrackerMIL_Create_Async');
  late final _TrackerMIL_Create_Async = _TrackerMIL_Create_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> TrackerMIL_Init(
    TrackerMIL self,
    Mat image,
    CvRect bbox,
  ) {
    return _TrackerMIL_Init(
      self,
      image,
      bbox,
    );
  }

  late final _TrackerMIL_InitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              TrackerMIL, Mat, CvRect)>>('TrackerMIL_Init');
  late final _TrackerMIL_Init = _TrackerMIL_InitPtr.asFunction<
      ffi.Pointer<CvStatus> Function(TrackerMIL, Mat, CvRect)>();

  ffi.Pointer<CvStatus> TrackerMIL_Init_Async(
    TrackerMIL self,
    Mat image,
    CvRect bbox,
    imp1.CvCallback_0 callback,
  ) {
    return _TrackerMIL_Init_Async(
      self,
      image,
      bbox,
      callback,
    );
  }

  late final _TrackerMIL_Init_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(TrackerMIL, Mat, CvRect,
              imp1.CvCallback_0)>>('TrackerMIL_Init_Async');
  late final _TrackerMIL_Init_Async = _TrackerMIL_Init_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          TrackerMIL, Mat, CvRect, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> TrackerMIL_Update(
    TrackerMIL self,
    Mat image,
    ffi.Pointer<CvRect> boundingBox,
    ffi.Pointer<ffi.Bool> rval,
  ) {
    return _TrackerMIL_Update(
      self,
      image,
      boundingBox,
      rval,
    );
  }

  late final _TrackerMIL_UpdatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(TrackerMIL, Mat, ffi.Pointer<CvRect>,
              ffi.Pointer<ffi.Bool>)>>('TrackerMIL_Update');
  late final _TrackerMIL_Update = _TrackerMIL_UpdatePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          TrackerMIL, Mat, ffi.Pointer<CvRect>, ffi.Pointer<ffi.Bool>)>();

  ffi.Pointer<CvStatus> TrackerMIL_Update_Async(
    TrackerMIL self,
    Mat image,
    imp1.CvCallback_2 callback,
  ) {
    return _TrackerMIL_Update_Async(
      self,
      image,
      callback,
    );
  }

  late final _TrackerMIL_Update_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              TrackerMIL, Mat, imp1.CvCallback_2)>>('TrackerMIL_Update_Async');
  late final _TrackerMIL_Update_Async = _TrackerMIL_Update_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(TrackerMIL, Mat, imp1.CvCallback_2)>();

  late final addresses = _SymbolAddresses(this);
}
